objects/ACP_Strategy__c.object
<CustomObject>
    <description>Esther 04/24/17 – Created for Account Plan</description>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Startegies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_Customer_Strategy__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Customer’s Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Execution_Plan__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Execution Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Project_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Status_Comments__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Status Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Status__c</fullName>
        <formula>CASE(ACP_Project_Status__c,

&quot;Green&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;),

&quot;Yellow&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;),

&quot;Red&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;),

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_TE_Strategy__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>TE Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACP_Target_Date__c</fullName>
        <description>Esther 04/24/17 – Created for Account Plan</description>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Strategy</label>
    <nameField>
        <displayFormat>SN-{00000000}</displayFormat>
        <label>Strategy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>